--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
-    background-color: #C0C0C0;
+   // background-color: #C0C0C0;
+    background-image: url("/maffia/game/images/background.jpg");
 }
 
